# smart-monkey-ocr

./: .gitignore  LICENSE  README.md  biome.jsonc  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs
src/app/: router.tsx
src/app/routes/: home.tsx  image-picker.tsx  screenshot-overlay.tsx
src/config/: env.ts
src/features/screenshot/: index.tsx
